build/log/idf_py_stderr_output_19953
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:137:1: error: expected identifier or '(' before '}' token
  137 | }
      | ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/TheOneRing.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
